force-app/main/default/objects/Opportunity/fields/Accounttest__c.field-meta.xml
<CustomField>
    <fullName>Accounttest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounttest</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>