force-app/main/default/objects/Opportunity/fields/Admssion_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Admssion_Date_and_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Admission Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>