force-app/main/default/objects/Opportunity/fields/Bed_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Bed_Occupancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed Occupancy</label>
    <referenceTo>Bed_Occupancy__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>