force-app/main/default/objects/Opportunity/fields/Bread_Winner__Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bread_Winner__Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>