force-app/main/default/objects/Opportunity/fields/Discharge_Date_date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date_date__c</fullName>
    <label>Discharge Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>