force-app/main/default/objects/Opportunity/fields/Reason_for_Admission__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Admission__c</fullName>
    <label>Reason for Admission</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;E</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Elderly Care</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Paediatric</fullName>
            </value>
            <value>
                <fullName>Private Room</fullName>
            </value>
            <value>
                <fullName>Wound care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>