force-app/main/default/objects/Opportunity/fields/Vehicle_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>