force-app/main/default/objects/Opportunity/fields/Wards_and_Private_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Wards_and_Private_Rooms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wards and Private Rooms</label>
    <referenceTo>Ward_and_Private_Room__c</referenceTo>
    <relationshipLabel>Admissions</relationshipLabel>
    <relationshipName>Admissions</relationshipName>
    <type>Lookup</type>
</CustomField>