force-app/main/default/objects/Opportunity/recordTypes/Admission.recordType-meta.xml
<RecordType>
    <fullName>Admission</fullName>
    <active>true</active>
    <businessProcess>Admission Process</businessProcess>
    <label>Admission</label>
</RecordType>